# Vidalyze

./: .dockerignore  .env.example  .gitignore  AUDIT.md  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  gemini.py  pyproject.toml  requirements.txt  sentiment.py  storage.py  youtube.py
.github/workflows/: ci.yml
Version2.0.0/: README.md
templates/: index.html
tests/: conftest.py  test_routes.py  test_sentiment.py  test_session_isolation.py  test_storage.py  test_youtube.py
v1.0.0/: README.md  app.py
v1.0.0/templates/: index.html
v2.0.0/: main.py
v3.0.0/: .gitignore  README.md  app.py  requirements.txt
v3.0.0/templates/: index.html
